<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#546E7A" />

        <Button
            android:id="@+id/fragment_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/fragment_back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_button" />

    </LinearLayout>
</ScrollView>

