<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        />
    <item
        android:id="@+id/nav_workout"
        android:icon="@drawable/ic_workout"
        android:title="@string/workouts" />
    <item
        android:id="@+id/nav_create"
        android:icon="@drawable/ic_create"
        android:title="@string/create"
        />
</menu>

