...
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name" />

    <!-- Create Post Button -->
    <Button
        android:id="@+id/createPostButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_post_button"
        app:layout_constraintTop_toBottomOf="@id/timeline_toolbar"
        app:layout_constraintEnd_toEndOf="@id/timeline_toolbar"
        app:layout_constraintStart_toStartOf="@id/timeline_toolbar" />
...
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/createPostButton"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- RecyclerView for Timeline -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

